<resources>
   <string name="abc_action_bar_home_description">Navigate home</string>
      <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_search_hint">Search ...</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with%s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="appName">NetEase</string>
    <string name="LineControl">line switch</string>
    <string name="LineCtrlIndicate">"Operating Instructions (wire middle button) click: Play / Pause; double-click on: next song; three strikes: on one;"</string>
    <string name="NeteaseCommunityManagementRuleLink">"NetEase cloud music community management rules"</string>
    <string name="QualityAutoNodesc">Auto</string>
    <string name="QualityHighNodesc">high</string>
    <string name="QualityHigherNodesc">high</string>
    <string name="QualityLosslessNodesc">lossless quality</string>
    <string name="QualityNormalNodesc">Standard</string>
    <string name="RadioSubNotify">Radio subscribed</string>
    <string name="SettingAccount">registered account</string>
    <string name="SettingOtherAcount">other login</string>
    <string name="SettingShareAcount">binding share account</string>
    <string name="aboutCreamPlaylistLink">What is the fine song single</string>
    <string name="ad">promotion</string>
    <string name="addFollowFailDueToBlack">Due to blacklist settings, the user can not concern</string>
    <string name="addMusicToStatus">to a dynamic soundtrack</string>
    <string name="addSubscribeSucForTrack">Bookmarked!Will recommend you related developments</string>
    <string name="adjustMainPageOrderHint">Now according to personal preference, freely adjust the Home section of the order it ~</string>
    <string name="adjustMainPagerOrderTv">to adjust the order of the columns</string>
    <string name="albumName">Album: %s</string>
    <string name="aliPay">Alipay</string>
    <string name="allContacts">All Contacts</string>
    <string name="allPhoto">All Photos</string>
    <string name="anonimousDrawerHeaderHint">"This app just got ripped open by BinaryCounter"</string>
    <string name="anonimousSubscribeOverHint">Favorite songs are full of anonymous Login</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout $ ScrollingViewBehavior</string>
    <string name="artistName">Artist:%s</string>
    <string name="artistRank">Singer standings</string>
    <string name="attendRightNow">Now participate</string>
    <string name="attendRightNowCount">has been involved in number:%s</string>
    <string name="autoSelect">automatic selection</string>
    <string name="bannerLive">Live</string>
    <string name="begForLyric">seek lyrics</string>
    <string name="begLyricScrollable">seek lyrics scroll</string>
    <string name="beginDownloadMV">MV has joined download queue</string>
    <string name="billBoardInRadioBarSubtitle">hottest shows and radio stations, updated daily!</string>
    <string name="billboardInMainRadioTitle">anchor radio charts</string>
    <string name="billboardTopUpdateTime">Last updated: %1$s</string>
     <string name="buffering">buffer ...</string>
    <string name="buy">buy</string>
    <string name="bySomething">by%s</string>
    <string name="canSyncToWeibo">can simultaneously share to microblogging</string>
    <string name="cantIdentifyDueToPermission">can not begin to identify, make sure not disabled Netease cloud music recording permission</string>
    <string name="checkMusicInfo">View song information</string>
    <string name="chooseDownloadResolution">select Download clarity</string>
    <string name="choosePayMethod">Select Payment Method</string>
    <string name="chooseTargetArtist">Please choose to view the singer</string>
    <string name="clear">Empty</string>
    <string name="clickToReload">Click reload</string>
    <string name="closedBarrage">barrage turned off</string>
    <string name="closedDebugMode">Closed debug mode</string>
    <string name="cloudLock">Cloud Music Locker</string>
    <string name="collectAllArtist">the entire collection</string>
    <string name="colorTheme">solid theme</string>
    <string name="commentFormat">\ @% 1 $ s reply:% 2 $ s</string>
    <string name="commentFormat2">\ @% 1 $ s:% 2 $ s</string>
    <string name="commentFormat3">\ @% 1 $ s comment:% 2 $ s</string>
    <string name="commentTrackTitle">Comment%s:</string>
    <string name="completeProfileModifiedPointIncrease">"Personal Information has complete integration +% d"</string>
    <string name="completeTagSelect">complete</string>
    <string name="computingFileSize">Calculating the file size ...</string>
    <string name="confirmReportAskForLyric">seek lyrics</string>
    <string name="confirmReportLyricContentBug">lyrics text error</string>
    <string name="confirmReportLyricScroolBug">seek lyrics scroll</string>
    <string name="confirmReportLyricTimeBug">lyrics Time Error</string>
    <string name="connectToDlnaDevice">connected DLNA devices</string>
    <string name="consumePointCount">% 1 $ d reward points to let people help you fill lyrics, continue? (If within 30 days of the lyrics are not complementary, points will be returned to you)</string>
    <string name="contributeRank">Contribution List</string>
    <string name="creamPlayListAll">all</string>
    <string name="creamPlaylistClassTitle">Choose your favorite free</string>
    <string name="creditInsufficient">Points inadequate</string>
    <string name="currentComment">Current Reviews</string>
    <string name="currentCommentDeleted">late, you view comment has been deleted</string>
    <string name="currentText">Current Copywriter</string>
    <string name="customColor">Preferences Color</string>
    <string name="customTheme">personalized theme</string>
    <string name="days">Day</string>
    <string name="delDownloadingItemConfirm">OK not download it?</string>
    <string name="deleteDownloadMVConfirm">to confirm the deletion downloaded MV it?</string>
    <string name="deleteMVAndKeepDownloadFile">Delete MV, retain the downloaded file</string>
    <string name="deleteMVAndNotKeepDownloadFile">Delete MV, does not retain the downloaded file</string>
    <string name="deleteMVConfirm">to confirm the deletion of this MV it?</string>
    <string name="deleteMusicAndKeepDownloadFile">Delete songs, download files Reserved</string>
    <string name="deleteMusicAndNotKeepDownloadFile">delete a song, do not retain the downloaded file</string>
    <string name="deleteOldThemeToast">For the best viewing experience, please re-download the skin</string>
    <string name="deletePlAndKeepDownloadFile">Remove song single, reservations download file</string>
    <string name="deletePlAndNotKeepDownloadFile">Remove song single, does not retain the download file</string>
    <string name="delete_downloaded_q">sure you want to delete the downloaded file?</string>
    <string name="delete_music_cache_q_Btn">Clear</string>
    <string name="delete_mv_q">sure you want to delete MV download files?</string>
    <string name="delete_mv_q_withpoint">re-download the corresponding points to be deducted again, sure you want to delete MV download files?</string>
    <string name="dlnaDescription">use Wi-Fi to transfer music to DLNA compatible devices to play</string>
    <string name="downloadTone">Download sound</string>
    <string name="notificationColor">notification bar color</string>
    <string name="pfFaq">FAQ</string>
    <string name="pfNewAttr">cloud music can do that play?</string>
    <string name="playSoundQuality">online play sound</string>
    <string name="settingPlayDnload">play and download</string>
    <string name="switchOff">unopened</string>
    <string name="switchOn">turned</string>
    <string name="pfSnsSetting">Connect Account</string>
    <string name="pfNotifySetting">News and privacy settings</string>
    <string name="pfAudioEffect">Equalizer</string>
    <string name="pfConnectOnlyInWIFI">Only use WiFi</string>
    <string name="pfDownloadOnlyInWIFI">Use 2G / 3G / 4G network to download</string>
    <string name="pfPlayOnlyInWIFI">Use 2G / 3G / 4G network to stream</string>
    <string name="pfSetMusicDownloadDirectory">Set download directory</string>
    <string name="pfClearCache">Clear Cache</string>
    <string name="pfAboutApp">About NetEase cloud music</string>
    <string name="pfFeedback">Feedback</string>
    <string name="pfDomainChange">Domain switching</string>
    <string name="pfAppRaise">Assessment sub-bar</string>
    <string name="pfLogout">Log out</string>
    <string name="appNewVersionUpdate">The new update</string>
    <string name="appCurrentVersion">The current version</string>
    <string name="whoCanShareToMe">Who can send me private messages</string>
    <string name="connectOnlyInWIFI">No 2G / 3G / 4G network traffic </string>
    <string name="msgNotifySetting">Notification Settings</string>
    <string name="nearBySetting">Set near</string>
    <string name="privateMsgSetting">Private letter setting</string>
    <string name="backgroundSetting">Background alert settings</string>
    <string name="playListNotify">playlists were collected</string>
    <string name="playListSharedNotify">playlist to be shared</string>
    <string name="beLikedNotify">Received praise</string>
    <string name="newFanNotify">New Fans</string>
    <string name="canbeSeenNotify">I can see people in the vicinity</string>
    <string name="canbeSeenNotifySecond">After closing, will not appear in the list of others in the vicinity</string>
    <string name="backgroundNotify">Background receive alerts</string>
    <string name="backgroundNotifySecond">Receive music recommendation and remind inbox</string>
    <string name="newAppVersion">The new version</string>
    <string name="NeteaseRuleLink">\"NetEase cloud music Terms of Service.\"</string>
    <string name="aboutOtherInfo">Another web version, PC client, iPhone client multiport synchronization, music players. For more details, visit: music.163.com</string>
    <string name="newIntroduce">Novice Tutorials</string>
    <string name="userSatisfaction">User Satisfaction Survey</string>
    <string name="lyricTranslate">Lyrics translation</string>
    <string name="floatLyricSetting">Desktop Lyrics</string>
    <string name="floatLyricSettingUnlock">Lock Desktop Lyrics</string>
    <string name="lyricTranslateHint">Display Chinese translation for foreign lyrics</string>
    <string name="lockScreenNeedShow">Lock screen display</string>
    <string name="settingNetwork">Network</string>
    <string name="settingAccount">Account and Privacy</string>
    <string name="settingTool">Tool</string>
    <string name="settingAbout">With respect to</string>
    <string name="blacklistSetting">Set blacklist</string>
    <string name="blacklist">Blacklist</string>
</resources>