<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/preferenceScrollView" android:background="@color/normalBackground" android:scrollbars="none" android:fadingEdgeLength="0.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@id/appIcon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="48.0dip" android:src="@drawable/about_logo" />
        <TextView android:textSize="13.0sp" android:textColor="#ff888888" android:id="@id/appVersion" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="45.669983dip" android:text="@string/appCurrentVersion" />
        <LinearLayout android:id="@id/updateVersionArea" style="@style/aboutContainer">
            <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:id="@id/appNewVersion" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/appNewVersionUpdate" android:layout_weight="1.0" />
            <TextView android:textSize="12.0sp" android:textColor="#ffffffff" android:id="@id/appNewVersionNumHint" android:background="@drawable/account_num_bg" android:paddingLeft="6.0dip" android:paddingTop="1.0dip" android:paddingRight="6.0dip" android:paddingBottom="1.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/newAppVersion" />
            <TextView android:textSize="16.0sp" android:textColor="#ff999999" android:id="@id/appNewVersionNum" android:paddingLeft="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="6.5999756dip" />
        </LinearLayout>
        <TextView android:id="@id/pfUserSatisfaction" android:text="@string/userSatisfaction" style="@style/aboutContainer" />
        <TextView android:id="@id/pfIntroduce" android:text="@string/newIntroduce" style="@style/aboutContainer" />
        <TextView android:id="@id/pfAppRaise" android:text="@string/pfAppRaise" style="@style/aboutContainer" />
        <TextView android:textSize="12.0sp" android:textColor="#ff888888" android:gravity="center_horizontal" android:paddingLeft="23.0dip" android:paddingRight="23.0dip" android:layout_width="wrap_content" android:layout_height="0.0dip" android:layout_marginTop="24.0dip" android:text="@string/aboutOtherInfo" android:layout_weight="1.0" />
        <TextView android:textColor="#ff333333" android:gravity="center_vertical" android:id="@id/serviceLink" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="13.299988dip" android:text="@string/NeteaseRuleLink" />
    </LinearLayout>
</ScrollView>